@@ -5,6 +5,7 @@
 		- Fixed email/folders.php not showing the number of messages in the INBOX.
 		- Fixed messages that where being passed around in the headlines admin section.
 		- Fixed setup script not working properly with certain version of MySQL.
+		- Fixed the participants list in the calendar.
 
 [0.9.1] - Fixed a few missing variables with templates.
 	    - editing a product in the inventory program now forwards you back to the category
